<resources>
    <string name="app_name">Ikasa</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Did\'nt have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="nama">Nama</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ikan_lele">Ikan Lele</string>
    <string name="harga">Rp. 10.000/kg</string>
    <string name="status_pesanan">Status Pesanan:</string>
    <string name="nama_ikan">Nama Ikan</string>
    <string name="hint_harga">Harga</string>
    <string name="stock">Stock (kg)</string>
    <string name="simpan">Simpan</string>
    <string name="tambah_item">Tambah Item</string>
    <string name="selesai">Selesai</string>
    <string name="belum_selesai">Belum Selesai</string>
    <string name="title_home">Home</string>
    <string name="title_pesanan">Pesanan</string>
    <string name="title_cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="jumlah_beli">Jumlah Beli (Kg)</string>
    <string name="my_profile">My Profile</string>
    <string name="feedback">Feedback</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="logout">Logout</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="harga_per_kg">Harga per kg</string>
    <string name="list_pesanan">List Pesanan</string>
    <string name="semua">Semua</string>
    <string name="proses">Proses</string>
    <string name="selesa">Selesai</string>
</resources>